--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ project:
 website:
   sidebar:
     contents: auto
+    style: "docked"
   title: "Kings Book"
   #reader-mode: true
   #image: "quarto-dark-bg.jpeg"
