--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,8 @@ project:
 website:
   sidebar:
     contents: auto
-  #  style: "docked"
+
+    style: "docked"
   title: "Kings Book"
   #reader-mode: true
   #image: "quarto-dark-bg.jpeg"
