--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ website:
     contents: auto
 
     style: "docked"
-  title: "Kings Book"
+  title: "KINGsNOTES"
   #reader-mode: true
   #image: "quarto-dark-bg.jpeg"
   #favicon: "favicon.png"
